# socketagentclientpy

./: .gitignore  LICENSE  README.md  pyproject.toml  test_client.py  test_mock_llm.py  test_natural_language.py
examples/: authenticated_client.py  basic_usage.py
socket_agent_client/: __init__.py  agent.py  client.py  discovery.py  exceptions.py  executor.py  models.py  tools.py
socket_agent_client/llm/: __init__.py  base.py  openai.py
socket_agent_client/middleware/: __init__.py  base.py
socketagentlib/: __init__.py  client.py  identity.py  models.py  tools.py
socketagentlib/llm/: ollama.py
socketagentlib/templates/: __init__.py  prompts.py
